# pochtecatl

./: Cargo.toml  README.md
crates/db/: Cargo.toml
crates/db/src/: client.rs  lib.rs
crates/db/src/migrations/: up-2-backtests.sql  up-3-backtest-closed-trades.sql  up-4-backtest-time-price-bars.sql
crates/db/src/models/: mod.rs
crates/db/src/models/backtest_closed_trades/: insert.sql  mod.rs  query_by_backtest_id.sql  query_by_backtest_pair_timestamp.sql
crates/db/src/models/backtest_time_price_bars/: insert.sql  mod.rs  query_by_pair_resolution_ts.sql
crates/db/src/models/backtests/: insert.sql  mod.rs  query_all.sql
crates/db/src/models/blocks/: insert.sql  mod.rs  query_by_number_range.sql  query_by_timestamp_range.sql
crates/db/src/primitives/: fixed_bytes.rs  u64.rs
crates/db/src/queries/: mod.rs
crates/db/src/queries/backtest_block_range/: mod.rs  query_by_backtest_id.sql
crates/db/src/queries/backtest_pair/: mod.rs  query_by_backtest_id.sql
crates/primitives/: Cargo.toml
crates/primitives/src/: block_id.rs  block_message.rs  constants.rs  fixed.rs  lib.rs  tick_data.rs  trade_metadata.rs
crates/primitives/src/abi/: multicall3.rs
crates/primitives/src/block/: block.rs  block_builder.rs  mod.rs
crates/primitives/src/dex/: indexed_trade.rs  mod.rs  pair.rs  pair_block_tick.rs  trade_request_op.rs
crates/primitives/src/dex/uniswap_v2/: indexed_trade.rs  mod.rs  pair.rs  pair_block_tick.rs
crates/primitives/src/dex/uniswap_v2/abi/: mod.rs  uniswap_v2_pair.rs  uniswap_v2_router.rs
crates/primitives/src/dex/uniswap_v3/: indexed_trade.rs  mod.rs  pair.rs  pair_block_tick.rs
crates/primitives/src/dex/uniswap_v3/abi/: mod.rs  uniswap_v3_quoter_v2.rs
crates/primitives/src/rpc_provider/: block_provider.rs  dex_provider.rs  mod.rs  multicall.rs  rpc_provider.rs  ttl_cache.rs
crates/primitives/src/time_price_bars/: indicators.rs  mod.rs  resolution_timestamp.rs  time_price_bar.rs  time_price_bars.rs
src/: config.rs  main.rs  rpc_provider.rs
src/abi/: erc20.rs  mod.rs  multicall3.rs  uniswap_v2_pair.rs  uniswap_v2_router.rs
src/db/: mod.rs
src/db/migrations/: up-1-blocks.sql  up-2-backtests.sql  up-3-backtest-closed-trades.sql
src/db/models/: mod.rs
src/db/models/backtest_closed_trades/: insert.sql  mod.rs  query_by_backtest_id.sql
src/db/models/backtests/: insert.sql  mod.rs
src/db/models/blocks/: insert.sql  mod.rs  query_by_number_range.sql
src/db/primitives/: fixed_bytes.rs  mod.rs  u64.rs
src/indexer/: block_price_bar.rs  block_range_indexer.rs  indexed_block_message.rs  indexer.rs  mod.rs  resolution_timestamp.rs  rpc_utils.rs  time_price_bar.rs  time_price_bar_indicators.rs  time_price_bar_store.rs  time_price_bars.rs
src/indexer/block_parser/: block.rs  block_builder.rs  log_parser.rs  mod.rs  parseable_trade.rs  uniswap_v2_pair_swap_log.rs  uniswap_v2_pair_sync_log.rs  uniswap_v2_pair_trade.rs
src/indexer/block_range_indexer/: block_chunk.rs  block_range_indexer.rs  mod.rs
src/indexer/log_parser/: block.rs  log_parser.rs  mod.rs
src/primitives/: block.rs  block_id.rs  block_message.rs  fixed.rs  indexed_block.rs  mod.rs  pair_message.rs  price_bar.rs  tick_data.rs  uniswap_v2_pair.rs  uniswap_v2_pair_trade.rs
src/primitives/block/: block.rs  block_builder.rs
src/primitives/dex/: indexed_trade.rs  mod.rs  pair.rs  pair_block_tick.rs
src/primitives/dex/uniswap_v2/: indexed_trade.rs  pair.rs  pair_block_tick.rs
src/primitives/dex/uniswap_v2/abi/: uniswap_v2_pair.rs
src/primitives/dex/uniswap_v3/: indexed_trade.rs  pair.rs  pair_block_tick.rs
src/primitives/dex/uniswap_v3/abi/: mod.rs  uniswap_v3_pool.rs  uniswap_v3_quoter_v2.rs  uniswap_v3_swap_router.rs
src/providers/: mod.rs
src/providers/rpc_provider/: async_lru_cache.rs  async_value.rs  block_provider.rs  dex_provider.rs  indexed_trade_provider.rs  mod.rs  multicall.rs  rpc_provider.rs  uniswap_v2_pair_provider.rs
src/strategies/: mod.rs  momentum_strategy.rs  strategy.rs  strategy_executor.rs  uniswap_v2_dex_provider.rs  uniswap_v2_momentum_strategy.rs  uniswap_v2_strategy.rs  uniswap_v2_strategy_executor.rs  uniswap_v3_dex_provider.rs
src/trade_controller/: address_trades.rs  backtest_util.rs  mod.rs  trade.rs  trade_controller.rs  trade_controller_request.rs  trade_metadata.rs  trade_request.rs  trades.rs  transaction.rs  uniswap_v2_close_trade_request.rs  uniswap_v2_open_trade_request.rs
src/trade_controller/trade_request/: mod.rs  trade_request_intent.rs  uniswap_v2_trade_request.rs
src/trade_position_controller/: close_position_request.rs  mod.rs  open_position_request.rs  trade_position.rs  trade_position_controller.rs
