[package]
name = "pochtecatl"
version = "0.1.0"
edition = "2021"

[features]
local = []

[dependencies]
# eth
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "bfd0fda", features = [
    "contract",
    "network",
    # "node-bindings",
    "providers",
    "provider-http",
    # "provider-ipc",
    "provider-ws",
    "rpc-client",
    # "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    # "signer-keystore",
    # "signer-ledger",
    # "signer-mnemonic",
    # "signer-trezor",
    "signer-wallet",
    # "signer-yubihsm",
] }
num-bigint = { version = "0.4.5", features = ["serde"] }
fixed = { version = "1.27.0", features = ["serde"] }
ruint = { version = "1.12.1", features = ["num-bigint"] }

# async
tokio = { version = "1.37.0", features = ["full"] }

# db
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json", "unlock_notify"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

# misc
url = "2.5.0"
reqwest = "0.12.4"
fallible-iterator = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
eyre = "0.6.12"
fnv = "1.0.7"
serde = { version = "1.0", default_features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default_features = false, features = ["alloc", "arbitrary_precision"] }
lazy_static = "1.4.0"
lru = "0.12.3"
dotenvy = "0.15.7"
hex = "0.4.3"


