[workspace]
members = [
  "bin/strategy",
  "bin/api",
  "crates/db",
  "crates/primitives",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]

# pochtecatl
pochtecatl-db = { path = "crates/db" }
pochtecatl-primitives = { path = "crates/primitives" }

# eth
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "bfd0fda", features = [
    "contract",
    "network",
    # "node-bindings",
    "providers",
    "provider-http",
    # "provider-ipc",
    "provider-ws",
    "rpc-client",
    # "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    # "signer-keystore",
    # "signer-ledger",
    # "signer-mnemonic",
    # "signer-trezor",
    "signer-wallet",
    # "signer-yubihsm",
    "getrandom"
] }

# sqlite
tokio = { version = "1.37.0", features = ["full"] }

# db
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json", "unlock_notify"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

# misc
serde = { version = "1.0", default_features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default_features = false, features = ["alloc", "arbitrary_precision"] }
eyre = "0.6.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
reqwest = "0.12.4"
url = "2.5.0"
fnv = "1.0.7"
num-bigint = { version = "0.4.5", features = ["serde"] }
fixed = { version = "1.27.0", features = ["serde"] }
lazy_static = "1.4.0"
hex-literal = "0.4.1"
dotenvy = "0.15.7"
