[package]
name = "pochtecatl-db"
version.workspace = true 
edition.workspace = true

[dependencies]

# eth
alloy.workspace = true

# sqlite
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true

# async 
tokio.workspace = true

# misc
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
tracing.workspace = true
fallible-iterator = "0.3.0"
